--- a/apps/web/src/styles.css
+++ b/apps/web/src/styles.css
@@ -1,20 +1,22 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
 html {
-  @media(max-width: 1080px){
-      font-size: 93.75%;
+  @media (max-width: 1080px) {
+    font-size: 93.75%;
   }
-  @media(max-width: 720px){
-      font-size: 87.5%;
+  @media (max-width: 720px) {
+    font-size: 87.5%;
   }
 }
 
 body {
   background: #f0f2f5;
+  background-color: var(--surface-ground);
+
   -webkit-font-smoothing: antialieased;
 }
 
