create layout and styles my account

--- a/apps/web/src/app/components/my-account/my-account.component.html
+++ b/apps/web/src/app/components/my-account/my-account.component.html
@@ -1,1 +1,63 @@
-<p>my-account works!</p>
+<!-- HeaderComponent -->
+<header style="background: #6847CC;">
+  <div class="content-header">
+    <img src="../../../assets/logo.svg" />
+    <button type="button" class="btn">
+      Nova transação
+    </button>
+  </div>
+</header>
+<!-- Fim HeaderComponent -->
+
+<div class="container">
+
+  <!-- SummaryComponent -->
+  <div class="summary">
+    <div class="content">
+      <header class="top">
+        <p>Entradas</p>
+        <img src="../../../assets/income.svg" alt="Entradas" />
+      </header>
+      <strong>1100</strong>
+    </div>
+    <div class="content">
+      <header class="top">
+        <p>Saídas</p>
+        <img src="../../../assets/outcome.svg" alt="Saidas" />
+      </header>
+      <strong>-100</strong>
+    </div>
+    <div class="content highlight-background">
+      <header class="top">
+        <p>Total</p>
+        <img src="../../../assets/total.svg" alt="Total" />
+      </header>
+      <strong>1000</strong>
+    </div>
+  </div>
+  <!-- Fim SummaryComponent -->
+
+  <!-- MyAccountComponent -->
+  <div class="wrapper">
+    <table>
+      <thead>
+        <tr>
+          <th>Título</th>
+          <th>Valor</th>
+          <th>Categoria</th>
+          <th>Data</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Título</td>
+          <td>Valor</td>
+          <td>Categoria</td>
+          <td>Data</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+  <!-- Fim MyAccountComponent -->
+</div>
