--- a/apps/web/src/app/components/my-account/my-account.component.html
+++ b/apps/web/src/app/components/my-account/my-account.component.html
@@ -1,8 +1,8 @@
 <!-- HeaderComponent -->
 <header style="background: #6847CC;">
   <div class="content-header">
-    <img src="../../../assets/logo.svg" />
-    <button type="button" class="btn">
+    <!-- <img src="../../../assets/logo.svg" /> -->
+    <button type="button" class="btn" (click)="newAccount()">
       Nova transação
     </button>
   </div>
