--- a/apps/web/src/app/components/my-account/my-account.component.css
+++ b/apps/web/src/app/components/my-account/my-account.component.css
@@ -77,7 +77,7 @@ div.highlight-background {
 .content-header {
   max-width: 1120px;
   margin: 0 auto;
-  padding: 2rem 1rem 12rem;
+  padding: 2rem 1rem 10rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -86,7 +86,7 @@ div.highlight-background {
 .btn {
   font-size: 1rem;
   color: #fff;
-  background: #9673FF;
+  background: #9673ff;
   border: 0;
   padding: 0 2rem;
   border-radius: 0.245rem;
