--- a/apps/web/src/app/modules/new-account/components/new-account/new-account.component.html
+++ b/apps/web/src/app/modules/new-account/components/new-account/new-account.component.html
@@ -4,12 +4,12 @@
   <input type="number" placeholder="Valor" formControlName="amount">
   <div class="radio-box-container">
     <button type="button" (click)="setType('deposit')"
-      [className]="'radio-box ' + (type.value === 'deposit' ? 'active-green' : '')">
+      [className]="type.value === 'deposit' | typeAccount: 'active-green' ">
       <img src="../../../../../assets/income.svg" alt="Valor a receber" />
       <span>A Receber</span>
     </button>
     <button type="button" (click)="setType('withdraw')"
-      [className]="'radio-box ' + (type.value === 'withdraw' ? 'active-red' : '')">
+      [className]="type.value === 'withdraw' | typeAccount: 'active-red' ">
       <img src="../../../../../assets/outcome.svg" alt="Valor a pagar" />
       <span>A Pagar</span>
     </button>
