--- a/apps/web/src/app/modules/auth/components/login/login.component.html
+++ b/apps/web/src/app/modules/auth/components/login/login.component.html
@@ -6,5 +6,9 @@
     <button type="submit">Entrar</button>
   </form>
   <div class="flex">ou</div>
-  <div class="flex">Cadastre-se</div>
+  <div class="flex">
+    <a [routerLink]="['/new-user']">
+      Cadastre-se
+    </a>
+  </div>
 </div>
