--- a/apps/web/src/app/modules/new-account/components/new-account/new-account.component.html
+++ b/apps/web/src/app/modules/new-account/components/new-account/new-account.component.html
@@ -1,5 +1,5 @@
 <form class="container" [formGroup]="formGroup" (ngSubmit)="onSubmit(formGroup.value)">
-  <h2>Cadastrar Transação</h2>
+  <h2>Cadastrar Nova Conta</h2>
   <input type="text" placeholder="Título" formControlName="title">
   <input type="number" placeholder="Valor" formControlName="amount">
   <div class="radio-box-container">
